--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@fontsource/playfair-display": "^4.5.12",
     "@fontsource/rubik": "^4.5.13",
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "husky": "^8.0.3"
   }
 }
